--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ body {
 @media only screen and (max-width: 767px) {
     .responsive-top-style {
         text-align: center;
-        padding-top: 100px; /*Body padding required for "navbar-fixed-top". Bootstrap doc says "body { padding-top: 70px; }" is required. Instead of body, it's applied responsive-top-style class which is the first element's class.*/
+        padding-top: 50px; /*Body padding required for "navbar-fixed-top". Bootstrap doc says "body { padding-top: 70px; }" is required. Instead of body, it's applied responsive-top-style class which is the first element's class. Because of .padding-topbottom class additional 50px padding is good enough*/
     }
 }
 
